--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cron": "^2.2.0",
     "express": "^4.18.2",
     "node-cron": "^3.0.2",
-    "rocketchat": "^0.57.3-alpha",
+    "rocketchat": "^1.0.0",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {},
