--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "cors": "^2.8.5",
     "cron": "^2.2.0",
     "express": "^4.18.2",
+    "har-validator": "^5.1.5",
     "node-cron": "^3.0.2",
-    "rocketchat": "^1.0.0",
-    "sqlite3": "^5.1.4"
+    "nodemon": "^2.0.21",
+    "querystring": "^0.2.1",
+    "request": "^2.88.2",
+    "rocketchat": "^0.57.3-alpha",
+    "sqlite3": "^5.1.4",
+    "uuid": "^9.0.0"
   },
-  "devDependencies": {},
   "description": ""
 }
